# sagarneeli-portfolio

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  tailwind.config.js  vercel.json
.github/workflows/: ci-backend.yml  ci-frontend.yml  ci.yml  codeql.yml
backend/: Dockerfile  Dockerfile.dev  alembic.ini  env.example  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: ai.py  health.py  portfolio.py
backend/app/core/: config.py  database.py  logging.py
backend/app/models/: __init__.py  base.py  portfolio.py
backend/app/services/: portfolio_service.py
backend/scripts/: init.sql  init_db.py
backend/tests/: __init__.py  conftest.py  test_api_endpoints.py  test_config.py  test_main.py
components/: Contact.js  Experience.js  Hero.js  Projects.js  Stack.js
content/: content.json
data/: config.js
docs/: ARCHITECTURE.md  CONTRIBUTING.md  KNOWN_ISSUES.md  SECURITY.md
frontend/: .prettierignore  .prettierrc.json  Dockerfile  Dockerfile.dev  eslint.config.mjs  jest.config.js  jest.config.mjs  jest.setup.js  jest.setup.mjs  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
frontend/e2e/: home.spec.ts
frontend/playwright-report/: index.html
frontend/public/: site.webmanifest
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/__tests__/: layout.test.tsx  page.test.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/contact/: page.tsx
frontend/src/app/experience/: page.tsx
frontend/src/app/projects/: page.tsx
frontend/src/components/: Footer.tsx  Header.tsx  ThemeSwitcher.tsx
frontend/src/components/__tests__/: hero-section.test.tsx  theme-provider.test.tsx  theme-toggle.test.tsx
frontend/src/components/brand/: Logo.tsx
frontend/src/components/brand/__tests__/: Logo.test.tsx
frontend/src/components/layout/: footer.tsx  header.tsx
frontend/src/components/layout/__tests__/: footer.links.test.tsx  footer.test.tsx  header.interactions.test.tsx  header.resume.test.tsx  header.test.tsx
frontend/src/components/sections/: about-section.tsx  contact-section.tsx  experience-section.tsx  hero-section.tsx  projects-section.tsx  skills-section.tsx
frontend/src/components/sections/__tests__/: about-section.test.tsx  contact-actions.test.tsx  contact-section.test.tsx  experience-section.test.tsx  projects-section.test.tsx  skills-section.test.tsx
frontend/src/components/ui/: theme-toggle.tsx
frontend/src/components/ui/__tests__/: button-aschild.test.tsx  button-variants.test.tsx  theme-toggle-light.test.tsx
frontend/src/lib/: api.ts  content.ts  utils.ts
frontend/src/lib/__tests__/: utils.test.ts
frontend/test-results/: .last-run.json
pages/: index.js
styles/: globals.css
